--- a/techie/css/post.css
+++ b/techie/css/post.css
@@ -174,9 +174,9 @@ article.post  div.post_content  div.video_embed {
     overflow: hidden;
 }
 
-article.post  div.page-content  .video-embed iframe,
-article.post  div.page-content  .video-embed object,
-article.post  div.page-content  .video-embed embed {
+article.post  div.post_content  .video-embed iframe,
+article.post  div.post_content  .video-embed object,
+article.post  div.post_content  .video-embed embed {
     position: absolute;
     top: 0;
     left: 0;
